gcc/testsuite/rust/rustc/ui/parser/issue-10392.rs
struct A { foo: isize }

fn a() -> A { panic!() }

fn main() {
    let A { , } = a(); // { dg-error "" "" { target *-*-* } }
}

